Revert "core: Make VDS a JPA entity"
This reverts commit 03ecd690241e302289b3da9337da93ac58b19a6e.

Change-Id: I8fb4e9a1434fa8a85455afb8caf7464f20cf779c
Signed-off-by: lzelkha@redhat.com <lzelkha@redhat.com>